Bug 1703272 - Send a mouse exit / mouse enter events around native menu opening and closing. r=mac-reviewers,harry

This avoids unintended cursor changes and tooltips while the menu is open.
The menu consumes all mouse move events during that time.

Differential Revision: https://phabricator.services.mozilla.com/D112463